清理第 22 轮服务端 API 差异